# agegate

./: .gitignore  AGENTS.md  CLAUDE-CODE-RUNBOOK.md  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: audit.py  policy.py  verify.py
backend/app/core/: config.py  decision.py  logging.py
backend/app/db/: client.py  repositories.py
backend/app/ml/: pipeline.py
backend/app/schemas/: api.py
backend/tests/: conftest.py  test_decision.py  test_pipeline_age.py  test_pipeline_insightface.py  test_repositories.py  test_verify_e2e.py
backend/tests/fixtures/: README.md  fixtures.json
docs/: claude-code-prompts.md  decision-policy.md  roadmap.md  setup.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: Camera.tsx  DecisionDisplay.tsx
frontend/lib/: api.ts  auth-context.tsx  supabase.ts
scripts/: bootstrap.sh  download_test_fixtures.py  set-env-from-clipboard.ps1  set-supabase-secrets.ps1
supabase/: 001_initial_schema.sql
tasks/: INDEX.md  WEEK1-01-bootstrap-environment.md  WEEK1-02-verify-decision-tests-pass.md  WEEK1-03-wire-insightface.md  WEEK1-04-wire-mivolo.md  WEEK1-05-integration-test-pipeline.md  WEEK1-06-supabase-client-wire-up.md
