[project]
name = "agegate-backend"
version = "0.1.0"
description = "AI-assisted age verification backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — let formatter handle
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ml: tests requiring ML models loaded (slow, ~5s+ to start)",
    "slow: tests that take > 1s",
    "db: tests requiring live Supabase connection",
]
addopts = "--strict-markers"
asyncio_mode = "auto"
